# training_parsing_yap

./: antarctic_timezone.py  caching.py  http_cache.sqlite  practic_1.py  practic_2.py  price.html  progress_bar.py  pyproject.toml  requests_vs_requests_cache.py  soup.py  whats_new.py
