[tool.poetry]
name = "training-parsing-yap"
version = "0.1.0"
description = ""
authors = ["kirichenko dmitriy <kirichenko.dmitriy1977@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests-cache = "1.0.0"
tqdm = "^4.67.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
